...
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Salad, Tomato, Onion, ..." textAlignment="justified"
                                        <rect key="frame" x="80.000000000000014" y="0.0" width="185.33333333333337" height="34"/>
                                        <accessibility key="accessibilityConfiguration" hint="Write your ingredient" label="Ingredient"/>
...
                                        <accessibility key="accessibilityConfiguration" hint="Add your ingredient to search recipes" label="Add Button"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Add"/>
                                        <connections>
                                            <action selector="addIngredient:" destination="LFd-4i-laH" eventType="touchUpInside" id="H6W-up-LrN"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q2d-CZ-HBJ">
                                <rect key="frame" x="136" y="763.66666666666663" width="142" height="34.333333333333371"/>
                                <accessibility key="accessibilityConfiguration" hint="Start searching recipes with all your ingredients" label="Search Button"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Search Recipes">
                                    <color key="baseForegroundColor" red="0.20000000000000001" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </buttonConfiguration>
...
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pOA-Ob-rFO">
                                            <rect key="frame" x="353.66666666666669" y="183" width="50.333333333333314" height="34"/>
                                            <accessibility key="accessibilityConfiguration" label="Favorite Button"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="34" id="4n5-X7-pv3"/>
...
                                            <rect key="frame" x="36" y="205" width="378" height="40.333333333333343"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0N-m9-3pW">
                                                    <rect key="frame" x="0.0" y="0.0" width="378" height="20.333333333333332"/>
                                                    <accessibility key="accessibilityConfiguration" hint="The recipe name" label="Title"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Favorites" id="CE6-ny-bz5"/>
                    <connections>
                        <outlet property="noFavoriteLabel" destination="xbg-3x-e9c" id="5zw-iE-BZY"/>
...
                                <rect key="frame" x="0.0" y="323" width="414" height="34.333333333333314"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Get the Recipe➾">
                                    <color key="baseForegroundColor" red="0.20000000000000001" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </buttonConfiguration>
...
